--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 081014b
+	base = 2a303a6
 	trimbase = 
 	parent = debian/melodic/ddwrt_access_point
-	previous = 
+	previous = 081014b
