--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 33cd7e9
+	base = 6450561
 	trimbase = 
 	parent = debian/melodic/hostapd_access_point
-	previous = 
+	previous = 33cd7e9
