--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = efe2c03
+	base = bb7ad2e
 	trimbase = 
 	parent = debian/melodic/linux_networking
-	previous = 
+	previous = efe2c03
