--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d0f234d
+	base = 87403cc
 	trimbase = 
 	parent = release/melodic/network_traffic_control
-	previous = 
+	previous = d0f234d
