--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 55424f6
+	base = c7c274f
 	trimbase = 
 	parent = debian/melodic/network_traffic_control
-	previous = 
+	previous = 55424f6
