--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 27a1ee2
+	base = 0615094
 	trimbase = 
 	parent = release/melodic/network_monitor_udp
-	previous = 
+	previous = 27a1ee2
