--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1d35c58
+	base = 3ad494d
 	trimbase = 
 	parent = debian/melodic/network_monitor_udp
-	previous = 
+	previous = 1d35c58
