--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a861403
+	base = f3b1a1b
 	trimbase = 
 	parent = release/melodic/asmach_tutorials
-	previous = 
+	previous = a861403
