--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ee7f402
+	base = e4df15f
 	trimbase = 
 	parent = debian/melodic/asmach_tutorials
-	previous = 
+	previous = ee7f402
