--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ad7423e
+	base = 5655dc4
 	trimbase = 
 	parent = debian/melodic/ieee80211_channels
-	previous = 
+	previous = ad7423e
