--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 40c9157
+	base = badc25a
 	trimbase = 
 	parent = release/melodic/access_point_control
-	previous = 
+	previous = 40c9157
