--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9ded95d
+	base = 0cb99dc
 	trimbase = 
 	parent = debian/melodic/access_point_control
-	previous = 
+	previous = 9ded95d
