--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2799fea
+	base = 680d196
 	trimbase = 
 	parent = release/melodic/multi_interface_roam
-	previous = 
+	previous = 2799fea
