--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7cb449e
+	base = ba988a2
 	trimbase = 
 	parent = debian/melodic/multi_interface_roam
-	previous = 
+	previous = 7cb449e
