--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 183b8cd
+	base = 89c96b0
 	trimbase = 
 	parent = debian/melodic/linksys_access_point
-	previous = 
+	previous = 183b8cd
