--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2e3dbf8
+	base = d755164
 	trimbase = 
 	parent = release/melodic/asmach
-	previous = 
+	previous = 2e3dbf8
