--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 15d7d65
+	base = 624223c
 	trimbase = 
 	parent = debian/melodic/asmach
-	previous = 
+	previous = 15d7d65
