--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6bec733
+	base = 91e46f5
 	trimbase = 
 	parent = release/melodic/network_detector
-	previous = 
+	previous = 6bec733
