--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = cf7df56
+	base = 82dd9f9
 	trimbase = 
 	parent = debian/melodic/network_detector
-	previous = 
+	previous = cf7df56
