--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5e598f3
+	base = 9157b54
 	trimbase = 
 	parent = debian/melodic/network_control_tests
-	previous = 
+	previous = 5e598f3
