--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a4f32a8
+	base = 8ab8b6d
 	trimbase = 
 	parent = debian/melodic/ddwrt_access_point
-	previous = 
+	previous = a4f32a8
