--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b9b576c
+	base = 4ad6f4f
 	trimbase = 
 	parent = debian/melodic/hostapd_access_point
-	previous = 
+	previous = b9b576c
