--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e629d58
+	base = 65d09e2
 	trimbase = 
 	parent = debian/melodic/linux_networking
-	previous = 
+	previous = e629d58
