--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e0b2a48
+	base = 5f0908e
 	trimbase = 
 	parent = debian/melodic/network_traffic_control
-	previous = 
+	previous = e0b2a48
