--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1afa8d9
+	base = 8572060
 	trimbase = 
 	parent = debian/melodic/network_monitor_udp
-	previous = 
+	previous = 1afa8d9
