--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6a1a23e
+	base = 23d49a5
 	trimbase = 
 	parent = debian/melodic/asmach_tutorials
-	previous = 
+	previous = 6a1a23e
