--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 43403c4
+	base = e42507c
 	trimbase = 
 	parent = debian/melodic/ieee80211_channels
-	previous = 
+	previous = 43403c4
