--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2a8af9b
+	base = 51e1d2e
 	trimbase = 
 	parent = debian/melodic/access_point_control
-	previous = 
+	previous = 2a8af9b
