--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 96d7244
+	base = 175f990
 	trimbase = 
 	parent = debian/melodic/multi_interface_roam
-	previous = 
+	previous = 96d7244
