--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2a25aca
+	base = 032f83f
 	trimbase = 
 	parent = debian/melodic/linksys_access_point
-	previous = 
+	previous = 2a25aca
