--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e7122ad
+	base = 9c4117f
 	trimbase = 
 	parent = debian/melodic/asmach
-	previous = 
+	previous = e7122ad
