--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = dedd90c
+	base = 88b8411
 	trimbase = 
 	parent = debian/melodic/network_detector
-	previous = 
+	previous = dedd90c
