--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7649988
+	base = 02bc7e0
 	trimbase = 
 	parent = release/melodic/network_control_tests
-	previous = 
+	previous = 7649988
