--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ce8f674
+	base = 2d6918c
 	trimbase = 
 	parent = rpm/melodic/network_control_tests
-	previous = 
+	previous = ce8f674
