--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 738e3b5
+	base = c08bc63
 	trimbase = 
 	parent = release/melodic/ddwrt_access_point
-	previous = 
+	previous = 738e3b5
