--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b39daef
+	base = 404165e
 	trimbase = 
 	parent = rpm/melodic/ddwrt_access_point
-	previous = 
+	previous = b39daef
