--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 885b6c6
+	base = c4d6bf7
 	trimbase = 
 	parent = release/melodic/hostapd_access_point
-	previous = 
+	previous = 885b6c6
