--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9da0156
+	base = f3bec0c
 	trimbase = 
 	parent = rpm/melodic/hostapd_access_point
-	previous = 
+	previous = 9da0156
