--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 14da245
+	base = bbe91e0
 	trimbase = 
 	parent = release/melodic/linux_networking
-	previous = 
+	previous = 14da245
