--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 13cf5c6
+	base = 03cda20
 	trimbase = 
 	parent = rpm/melodic/linux_networking
-	previous = 
+	previous = 13cf5c6
