--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = cf9d27d
+	base = 23da317
 	trimbase = 
 	parent = rpm/melodic/network_traffic_control
-	previous = 
+	previous = cf9d27d
