--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d32beb9
+	base = 70ad564
 	trimbase = 
 	parent = rpm/melodic/network_monitor_udp
-	previous = 
+	previous = d32beb9
