--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c13286b
+	base = af0057a
 	trimbase = 
 	parent = rpm/melodic/asmach_tutorials
-	previous = 
+	previous = c13286b
