--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1701167
+	base = 80c383b
 	trimbase = 
 	parent = release/melodic/ieee80211_channels
-	previous = 
+	previous = 1701167
