--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9ddd5be
+	base = 8e63c4f
 	trimbase = 
 	parent = rpm/melodic/ieee80211_channels
-	previous = 
+	previous = 9ddd5be
