--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e0a375a
+	base = a8f08ef
 	trimbase = 
 	parent = rpm/melodic/access_point_control
-	previous = 
+	previous = e0a375a
