--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0bda124
+	base = 15c0fd6
 	trimbase = 
 	parent = rpm/melodic/multi_interface_roam
-	previous = 
+	previous = 0bda124
