--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 684c6f8
+	base = a2b2665
 	trimbase = 
 	parent = release/melodic/linksys_access_point
-	previous = 
+	previous = 684c6f8
