--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 274360e
+	base = 9a9aace
 	trimbase = 
 	parent = rpm/melodic/linksys_access_point
-	previous = 
+	previous = 274360e
