--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b5970f4
+	base = 773aad5
 	trimbase = 
 	parent = rpm/melodic/asmach
-	previous = 
+	previous = b5970f4
