--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c13e4d9
+	base = c181686
 	trimbase = 
 	parent = rpm/melodic/network_detector
-	previous = 
+	previous = c13e4d9
