--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ieee80211_channels
-	base = 89e2901
-	trimbase = 
+	base = 4645207
+	trimbase = 89e2901
 	parent = upstream
 	previous = 816c154
