--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = access_point_control
 	base = 40c9157
-	trimbase = 7923446
+	trimbase = 
 	parent = upstream
 	previous = 816c154
