--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = access_point_control
-	base = d081662
-	trimbase = 
+	base = 046c8a2
+	trimbase = d081662
 	parent = upstream
 	previous = 816c154
