--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = multi_interface_roam
 	base = 2799fea
-	trimbase = 8fd0841
+	trimbase = 
 	parent = upstream
 	previous = 816c154
