--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = linksys_access_point
 	base = 684c6f8
-	trimbase = d9f73fb
+	trimbase = 
 	parent = upstream
 	previous = 816c154
