--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = linksys_access_point
-	base = 26acacc
-	trimbase = 
+	base = d5ee5fd
+	trimbase = 26acacc
 	parent = upstream
 	previous = 816c154
