--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = asmach
-	base = 91f7196
-	trimbase = 
+	base = f922660
+	trimbase = 91f7196
 	parent = upstream
 	previous = 816c154
