--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = network_control_tests
 	base = 7649988
-	trimbase = 5c5debc
+	trimbase = 
 	parent = upstream
 	previous = 816c154
