--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = linux_networking
-	base = 4b86234
-	trimbase = 
+	base = b76739e
+	trimbase = 4b86234
 	parent = upstream
 	previous = 816c154
