--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ddwrt_access_point
-	base = 904f6c7
-	trimbase = 
+	base = cb68f65
+	trimbase = 904f6c7
 	parent = upstream
 	previous = 816c154
