--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = hostapd_access_point
-	base = 11d4e0e
-	trimbase = 
+	base = 2831457
+	trimbase = 11d4e0e
 	parent = upstream
 	previous = 816c154
