--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = hostapd_access_point
 	base = 885b6c6
-	trimbase = 69b053c
+	trimbase = 
 	parent = upstream
 	previous = 816c154
