--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = network_detector
-	base = abaf456
-	trimbase = 
+	base = 5643638
+	trimbase = abaf456
 	parent = upstream
 	previous = 816c154
