--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = network_traffic_control
 	base = d0f234d
-	trimbase = 0596be0
+	trimbase = 
 	parent = upstream
 	previous = 816c154
