--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = network_traffic_control
-	base = 27b6a3b
-	trimbase = 
+	base = a4052aa
+	trimbase = 27b6a3b
 	parent = upstream
 	previous = 816c154
