--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = network_monitor_udp
-	base = a45ca1b
-	trimbase = 
+	base = 424da46
+	trimbase = a45ca1b
 	parent = upstream
 	previous = 816c154
