--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = asmach_tutorials
-	base = 72d4c26
-	trimbase = 
+	base = 47f927d
+	trimbase = 72d4c26
 	parent = upstream
 	previous = 816c154
