--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ieee80211_channels
-	base = f47e01a
-	trimbase = 
+	base = 8cddfc3
+	trimbase = f47e01a
 	parent = upstream
 	previous = 816c154
