--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = access_point_control
-	base = 7244d5d
-	trimbase = 
+	base = b992d34
+	trimbase = 7244d5d
 	parent = upstream
 	previous = 816c154
