--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = access_point_control
 	base = 046c8a2
-	trimbase = d081662
+	trimbase = 
 	parent = upstream
 	previous = 816c154
