--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = multi_interface_roam
 	base = ff89f3f
-	trimbase = 94e181e
+	trimbase = 
 	parent = upstream
 	previous = 816c154
