--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = multi_interface_roam
-	base = f1c463a
-	trimbase = 
+	base = b7451e1
+	trimbase = f1c463a
 	parent = upstream
 	previous = 816c154
