--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = linksys_access_point
-	base = fb7f96e
-	trimbase = 
+	base = e42988c
+	trimbase = fb7f96e
 	parent = upstream
 	previous = 816c154
