--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = asmach
-	base = 1373005
-	trimbase = 
+	base = 9c8ecd9
+	trimbase = 1373005
 	parent = upstream
 	previous = 816c154
