--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = network_control_tests
-	base = 7036c96
-	trimbase = 
+	base = 4ea51ed
+	trimbase = 7036c96
 	parent = upstream
 	previous = 816c154
