--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = network_control_tests
 	base = 8e60376
-	trimbase = b0c61fb
+	trimbase = 
 	parent = upstream
 	previous = 816c154
