--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = linux_networking
-	base = bce1e8b
-	trimbase = 
+	base = 75c9ce9
+	trimbase = bce1e8b
 	parent = upstream
 	previous = 816c154
