--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ddwrt_access_point
-	base = b0678fb
-	trimbase = 
+	base = 75141c6
+	trimbase = b0678fb
 	parent = upstream
 	previous = 816c154
