--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = hostapd_access_point
-	base = b6b7297
-	trimbase = 
+	base = ef29714
+	trimbase = b6b7297
 	parent = upstream
 	previous = 816c154
