--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = network_detector
-	base = f9c23bd
-	trimbase = 
+	base = c3dda25
+	trimbase = f9c23bd
 	parent = upstream
 	previous = 816c154
