--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = network_traffic_control
 	base = a4052aa
-	trimbase = 27b6a3b
+	trimbase = 
 	parent = upstream
 	previous = 816c154
