--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = network_traffic_control
-	base = 8f27cec
-	trimbase = 
+	base = 74eeb54
+	trimbase = 8f27cec
 	parent = upstream
 	previous = 816c154
