--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = network_monitor_udp
-	base = 87e322d
-	trimbase = 
+	base = 22c5da7
+	trimbase = 87e322d
 	parent = upstream
 	previous = 816c154
