--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = asmach_tutorials
-	base = 043cb85
-	trimbase = 
+	base = d2053bc
+	trimbase = 043cb85
 	parent = upstream
 	previous = 816c154
