--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ieee80211_channels
-	base = 3c74358
-	trimbase = 
+	base = 240b486
+	trimbase = 3c74358
 	parent = upstream
 	previous = 3e92532
