--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = access_point_control
 	base = 0668d2c
-	trimbase = 1e78a7d
+	trimbase = 
 	parent = upstream
 	previous = 14de5d3
