--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = hostapd_access_point
 	base = abf95b1
-	trimbase = 1e8008e
+	trimbase = 
 	parent = upstream
 	previous = 14de5d3
