--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = multi_interface_roam
 	base = ebc8f2c
-	trimbase = e89f050
+	trimbase = 
 	parent = upstream
 	previous = 14de5d3
