--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = linux_networking
-	base = ae06c46
-	trimbase = 
+	base = 8cf54bd
+	trimbase = ae06c46
 	parent = upstream
 	previous = 3e92532
