--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = asmach
-	base = 2939e23
-	trimbase = 
+	base = b49f8b0
+	trimbase = 2939e23
 	parent = upstream
 	previous = 3e92532
