--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ddwrt_access_point
-	base = 35e7830
-	trimbase = 
+	base = cbe0deb
+	trimbase = 35e7830
 	parent = upstream
 	previous = 3e92532
