--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = linksys_access_point
 	base = 9091da4
-	trimbase = f1a26a9
+	trimbase = 
 	parent = upstream
 	previous = 14de5d3
