--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = linksys_access_point
-	base = 96cec07
-	trimbase = 
+	base = 75bc2e8
+	trimbase = 96cec07
 	parent = upstream
 	previous = 3e92532
