--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = network_control_tests
 	base = 8b1c8f9
-	trimbase = 3144d8d
+	trimbase = 
 	parent = upstream
 	previous = 14de5d3
