--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = network_control_tests
-	base = abb0d7d
-	trimbase = 
+	base = 7ee1b30
+	trimbase = abb0d7d
 	parent = upstream
 	previous = 3e92532
