--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = network_detector
-	base = cb7b6a6
-	trimbase = 
+	base = b403e2d
+	trimbase = cb7b6a6
 	parent = upstream
 	previous = 3e92532
