--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = network_traffic_control
 	base = 0d895cf
-	trimbase = 6c9254d
+	trimbase = 
 	parent = upstream
 	previous = 14de5d3
