--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = network_monitor_udp
-	base = 6840edc
-	trimbase = 
+	base = 767cbd5
+	trimbase = 6840edc
 	parent = upstream
 	previous = 3e92532
