--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = asmach_tutorials
-	base = d8044ad
-	trimbase = 
+	base = 04a4f5c
+	trimbase = d8044ad
 	parent = upstream
 	previous = 3e92532
