--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ieee80211_channels
-	base = 8f6e338
-	trimbase = 
+	base = 86ccba8
+	trimbase = 8f6e338
 	parent = upstream
 	previous = 5ef2627
