--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = access_point_control
 	base = b7145b6
-	trimbase = 956c0df
+	trimbase = 
 	parent = upstream
 	previous = 3e92532
