--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = hostapd_access_point
 	base = e4d797e
-	trimbase = 11e07af
+	trimbase = 
 	parent = upstream
 	previous = 3e92532
