--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = access_point_control
-	base = 32fc35f
-	trimbase = 
+	base = 2d57a52
+	trimbase = 32fc35f
 	parent = upstream
 	previous = 5ef2627
