--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = hostapd_access_point
-	base = 5db6079
-	trimbase = 
+	base = d85d8f9
+	trimbase = 5db6079
 	parent = upstream
 	previous = 5ef2627
