--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = multi_interface_roam
 	base = f943701
-	trimbase = b9ab182
+	trimbase = 
 	parent = upstream
 	previous = 3e92532
