--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = multi_interface_roam
-	base = 0988a40
-	trimbase = 
+	base = e0f29a9
+	trimbase = 0988a40
 	parent = upstream
 	previous = 5ef2627
