--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = linksys_access_point
-	base = dd509f0
-	trimbase = 
+	base = 6c41c43
+	trimbase = dd509f0
 	parent = upstream
 	previous = 5ef2627
