--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = asmach
-	base = aef8e6d
-	trimbase = 
+	base = cb8c4a7
+	trimbase = aef8e6d
 	parent = upstream
 	previous = 5ef2627
