--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = linux_networking
-	base = b198085
-	trimbase = 
+	base = bb66e52
+	trimbase = b198085
 	parent = upstream
 	previous = 5ef2627
