--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ddwrt_access_point
-	base = 08fc7ad
-	trimbase = 
+	base = 6f10bae
+	trimbase = 08fc7ad
 	parent = upstream
 	previous = 5ef2627
