--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = network_control_tests
-	base = 08b916a
-	trimbase = 
+	base = 40692a1
+	trimbase = 08b916a
 	parent = upstream
 	previous = 5ef2627
