--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = network_detector
-	base = fefbc37
-	trimbase = 
+	base = b5e15de
+	trimbase = fefbc37
 	parent = upstream
 	previous = 5ef2627
