--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = network_traffic_control
 	base = 4aed97c
-	trimbase = 61e8694
+	trimbase = 
 	parent = upstream
 	previous = 3e92532
