--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = network_traffic_control
-	base = e955ed4
-	trimbase = 
+	base = 3f2bbc8
+	trimbase = e955ed4
 	parent = upstream
 	previous = 5ef2627
