--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = network_monitor_udp
-	base = 0a59a1e
-	trimbase = 
+	base = 27d4a33
+	trimbase = 0a59a1e
 	parent = upstream
 	previous = 5ef2627
