--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = asmach_tutorials
-	base = b52ccdb
-	trimbase = 
+	base = 4ec156d
+	trimbase = b52ccdb
 	parent = upstream
 	previous = 5ef2627
